err/gaebuild.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gaebuild'...
Compiling './lib/python3.5/site-packages/gaebuild/dist_installer.py'...
***   File "./lib/python3.5/site-packages/gaebuild/dist_installer.py", line 102
    print 'distribute %s' % get_distribution('distribute').version
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gaebuild/gaebuild.py'...
***   File "./lib/python3.5/site-packages/gaebuild/gaebuild.py", line 37
    print '\n------------------ Installing GAEBuild ------------------\n'
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gaebuild/installer.py'...
***   File "./lib/python3.5/site-packages/gaebuild/installer.py", line 163
    print '\n************** Intalling gae/django apps **************\n'
                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gaebuild-0.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc/recipe'...
Listing './lib/python3.5/site-packages/zc/recipe/egg'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zc.recipe.egg-2.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
